--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4886df44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import dependencies for training, testing, scaling, and model creation\n",
+    "from path import Path\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "# import dependencies for model evaluation\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b691dd",
    "metadata": {},
    "outputs": [],
    "source": []
