Data split into training and testing, features scaled

--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f630d380",
+   "id": "c320204d",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "465830ba",
+   "id": "50e64e3e",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b895cc8",
+   "id": "8e6b472e",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "30fd0b19",
+   "id": "ed562368",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f546d100",
+   "id": "461eebd9",
    "metadata": {
     "scrolled": true
    },
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7d1dff5d",
+   "id": "522b074e",
    "metadata": {},
    "outputs": [
     {
@@ -636,8 +636,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "64614eee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3681, 21) (1228, 21) (3681,) (1228,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split data into training and testing data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size = 0.25, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4f25aeb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.66644509 -0.32568345  4.35952231  2.66626516 -0.32047536 -1.21674082\n",
+      "   1.21742795 -0.01648451 -0.72011413  0.72011413 -0.38211902 -0.06178863\n",
+      "   0.85380369 -0.43468781 -0.38909116  1.00572134 -1.00572134 -0.64395731\n",
+      "  -0.4548464  -0.78252934  2.32896624]\n",
+      " [-0.67061015 -0.32568345 -0.22938293  0.03762395  1.21305703  0.82186772\n",
+      "  -0.82140385 -0.01648451  1.38866877 -1.38866877 -0.38211902 -0.06178863\n",
+      "   0.85380369 -0.43468781 -0.38909116 -0.99431121  0.99431121 -0.64395731\n",
+      "  -0.4548464   1.27790736 -0.42937505]]\n",
+      " ----------\n",
+      " [[-0.58147313 -0.32568345 -0.22938293 -0.49701494 -0.70385845  0.82186772\n",
+      "  -0.82140385 -0.01648451 -0.72011413  0.72011413  2.61698568 -0.06178863\n",
+      "  -1.17122942 -0.43468781 -0.38909116 -0.99431121  0.99431121  1.55289798\n",
+      "  -0.4548464  -0.78252934 -0.42937505]\n",
+      " [ 0.26532852 -0.32568345 -0.22938293 -0.38563184  0.44629084 -1.21674082\n",
+      "   1.21742795 -0.01648451 -0.72011413  0.72011413 -0.38211902 -0.06178863\n",
+      "   0.85380369 -0.43468781 -0.38909116  1.00572134 -1.00572134 -0.64395731\n",
+      "  -0.4548464   1.27790736 -0.42937505]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an instance of the StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X_scaler = scaler.fit(X_train)\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)\n",
+    "\n",
+    "#print first two rows of scaled training and testing features\n",
+    "print(\n",
+    "f'{X_train_scaled[:2]}\\n \\\n",
+    "----------\\n \\\n",
+    "{X_test_scaled[:2]}'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bd9def63",
+   "id": "a693ac73",
    "metadata": {},
    "outputs": [],
    "source": []
