notebook file saved (same changes as last commit)

--- a/cleaning_analysis/stroke_prediction_analysis.ipynb
+++ b/cleaning_analysis/stroke_prediction_analysis.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2206966e",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "4          Rural             174.12  24.0     never smoked       1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "8041790f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d2023d46",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "array(['Male', 'Female', 'Other'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "2b4be004",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "243bbc9c",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "b616424a",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "22c066f5",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "e284f8dd",
    "metadata": {},
    "outputs": [
@@ -863,7 +863,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "17d09cc2",
    "metadata": {},
    "outputs": [],
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "5e9fa897",
    "metadata": {},
    "outputs": [
@@ -918,7 +918,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "eb2b263f",
    "metadata": {
     "scrolled": true
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "42489110",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,21 +987,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0286f807",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save stroke_encoded as csv file.\n",
-    "stroke_encoded.to_csv('resources/clean_stroke_df.csv', index=False)"
+    "stroke_encoded.to_csv('../resources/clean_stroke_df.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "363af77a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>gender_Female</th>\n",
+       "      <th>gender_Male</th>\n",
+       "      <th>gender_Other</th>\n",
+       "      <th>ever_married_No</th>\n",
+       "      <th>...</th>\n",
+       "      <th>work_type_Never_worked</th>\n",
+       "      <th>work_type_Private</th>\n",
+       "      <th>work_type_Self-employed</th>\n",
+       "      <th>work_type_children</th>\n",
+       "      <th>Residence_type_Rural</th>\n",
+       "      <th>Residence_type_Urban</th>\n",
+       "      <th>smoking_status_Unknown</th>\n",
+       "      <th>smoking_status_formerly smoked</th>\n",
+       "      <th>smoking_status_never smoked</th>\n",
+       "      <th>smoking_status_smokes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>42.854145</td>\n",
+       "      <td>0.091872</td>\n",
+       "      <td>0.049501</td>\n",
+       "      <td>104.816052</td>\n",
+       "      <td>28.448564</td>\n",
+       "      <td>0.042575</td>\n",
+       "      <td>0.590141</td>\n",
+       "      <td>0.409656</td>\n",
+       "      <td>0.000204</td>\n",
+       "      <td>0.347321</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.004482</td>\n",
+       "      <td>0.572622</td>\n",
+       "      <td>0.157873</td>\n",
+       "      <td>0.136688</td>\n",
+       "      <td>0.492768</td>\n",
+       "      <td>0.507232</td>\n",
+       "      <td>0.302098</td>\n",
+       "      <td>0.170503</td>\n",
+       "      <td>0.377266</td>\n",
+       "      <td>0.150132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>22.575986</td>\n",
+       "      <td>0.288875</td>\n",
+       "      <td>0.216934</td>\n",
+       "      <td>44.417384</td>\n",
+       "      <td>7.843834</td>\n",
+       "      <td>0.201917</td>\n",
+       "      <td>0.491858</td>\n",
+       "      <td>0.491820</td>\n",
+       "      <td>0.014273</td>\n",
+       "      <td>0.476167</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.066801</td>\n",
+       "      <td>0.494748</td>\n",
+       "      <td>0.364659</td>\n",
+       "      <td>0.343552</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.459214</td>\n",
+       "      <td>0.376113</td>\n",
+       "      <td>0.484752</td>\n",
+       "      <td>0.357238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>91.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>271.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               age  hypertension  heart_disease  avg_glucose_level  \\\n",
+       "count  4909.000000   4909.000000    4909.000000        4909.000000   \n",
+       "mean     42.854145      0.091872       0.049501         104.816052   \n",
+       "std      22.575986      0.288875       0.216934          44.417384   \n",
+       "min       0.000000      0.000000       0.000000          55.000000   \n",
+       "25%      25.000000      0.000000       0.000000          77.000000   \n",
+       "50%      44.000000      0.000000       0.000000          91.000000   \n",
+       "75%      60.000000      0.000000       0.000000         113.000000   \n",
+       "max      82.000000      1.000000       1.000000         271.000000   \n",
+       "\n",
+       "               bmi       stroke  gender_Female  gender_Male  gender_Other  \\\n",
+       "count  4909.000000  4909.000000    4909.000000  4909.000000   4909.000000   \n",
+       "mean     28.448564     0.042575       0.590141     0.409656      0.000204   \n",
+       "std       7.843834     0.201917       0.491858     0.491820      0.014273   \n",
+       "min      10.000000     0.000000       0.000000     0.000000      0.000000   \n",
+       "25%      23.000000     0.000000       0.000000     0.000000      0.000000   \n",
+       "50%      28.000000     0.000000       1.000000     0.000000      0.000000   \n",
+       "75%      33.000000     0.000000       1.000000     1.000000      0.000000   \n",
+       "max      97.000000     1.000000       1.000000     1.000000      1.000000   \n",
+       "\n",
+       "       ever_married_No  ...  work_type_Never_worked  work_type_Private  \\\n",
+       "count      4909.000000  ...             4909.000000        4909.000000   \n",
+       "mean          0.347321  ...                0.004482           0.572622   \n",
+       "std           0.476167  ...                0.066801           0.494748   \n",
+       "min           0.000000  ...                0.000000           0.000000   \n",
+       "25%           0.000000  ...                0.000000           0.000000   \n",
+       "50%           0.000000  ...                0.000000           1.000000   \n",
+       "75%           1.000000  ...                0.000000           1.000000   \n",
+       "max           1.000000  ...                1.000000           1.000000   \n",
+       "\n",
+       "       work_type_Self-employed  work_type_children  Residence_type_Rural  \\\n",
+       "count              4909.000000         4909.000000           4909.000000   \n",
+       "mean                  0.157873            0.136688              0.492768   \n",
+       "std                   0.364659            0.343552              0.499999   \n",
+       "min                   0.000000            0.000000              0.000000   \n",
+       "25%                   0.000000            0.000000              0.000000   \n",
+       "50%                   0.000000            0.000000              0.000000   \n",
+       "75%                   0.000000            0.000000              1.000000   \n",
+       "max                   1.000000            1.000000              1.000000   \n",
+       "\n",
+       "       Residence_type_Urban  smoking_status_Unknown  \\\n",
+       "count           4909.000000             4909.000000   \n",
+       "mean               0.507232                0.302098   \n",
+       "std                0.499999                0.459214   \n",
+       "min                0.000000                0.000000   \n",
+       "25%                0.000000                0.000000   \n",
+       "50%                1.000000                0.000000   \n",
+       "75%                1.000000                1.000000   \n",
+       "max                1.000000                1.000000   \n",
+       "\n",
+       "       smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
+       "count                     4909.000000                  4909.000000   \n",
+       "mean                         0.170503                     0.377266   \n",
+       "std                          0.376113                     0.484752   \n",
+       "min                          0.000000                     0.000000   \n",
+       "25%                          0.000000                     0.000000   \n",
+       "50%                          0.000000                     0.000000   \n",
+       "75%                          0.000000                     1.000000   \n",
+       "max                          1.000000                     1.000000   \n",
+       "\n",
+       "       smoking_status_smokes  \n",
+       "count            4909.000000  \n",
+       "mean                0.150132  \n",
+       "std                 0.357238  \n",
+       "min                 0.000000  \n",
+       "25%                 0.000000  \n",
+       "50%                 0.000000  \n",
+       "75%                 0.000000  \n",
+       "max                 1.000000  \n",
+       "\n",
+       "[8 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display a statistical overview of the DataFrame\n",
     "stroke_encoded.describe()"
