updating readme.me.

--- a/cleaning_analysis/stroke_prediction_analysis_cleaning.ipynb
+++ b/cleaning_analysis/stroke_prediction_analysis_cleaning.ipynb
@@ -802,6 +802,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "83ebb753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show stroke_encoded\n",
+    "# stroke_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d22b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Delete id column # week 4 day 2\n",
+    "# del stroke_encoded['id']\n",
+    "# stroke_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "0286f807",
    "metadata": {},
