Updated data cleaning

--- a/cleaning_analysis/stroke_prediction_analysis.ipynb
+++ b/cleaning_analysis/stroke_prediction_analysis.ipynb
@@ -1324,7 +1324,7 @@
     }
    ],
    "source": [
-    "# Display a statistical overview of the DataFrame\n",
+    "# Display a statistical overview of the dataframe\n",
     "stroke_encoded.describe()"
    ]
   },
