adding png to image folder and updated stat file.

--- a/exploratory_data_analysis/stroke_prediction_analysis_stat.ipynb
+++ b/exploratory_data_analysis/stroke_prediction_analysis_stat.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82688d50",
+   "id": "48c97765",
    "metadata": {},
    "source": [
     "## Determine the missing, unique values, and data types"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3361530",
+   "id": "bb9f6802",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ddee30b",
+   "id": "01815b1c",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "632a9ff8",
+   "id": "32de63f9",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4240889f",
+   "id": "1526ce1e",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0442b1ff",
+   "id": "101cc05c",
    "metadata": {
     "scrolled": true
    },
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e6cd7f7a",
+   "id": "df60ad0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "128951bb",
+   "id": "ab708824",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "514ba516",
+   "id": "76bcb4e6",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b0805444",
+   "id": "7716f32d",
    "metadata": {},
    "outputs": [
     {
@@ -897,14 +897,16 @@
    "source": [
     "# create a plot (boxplot) with age, gender, and stroke\n",
     "sns.boxplot(data = stroke_df, x=stroke_df['age'], y=stroke_df['gender'], hue=stroke_df['stroke'])\n",
-    "# young female outlier. \n"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9153b3a1",
+   "id": "de5c41a0",
    "metadata": {},
-   "source": []
+   "source": [
+    "## add description of  visuals including outliers young female outlier. "
+   ]
   },
   {
    "cell_type": "code",
@@ -941,14 +943,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eceb2c0c",
+   "id": "2ba1c4ce",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "578cca2d",
+   "id": "d89e3826",
    "metadata": {},
    "outputs": [
     {
@@ -974,20 +976,19 @@
    ],
    "source": [
     "# create a plot (hist) \n",
-    "sns.histplot(data=stroke_df, x='smoking_status', hue='stroke')\n",
-    "\n"
+    "sns.histplot(data=stroke_df, x='smoking_status', hue='stroke')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d29ecbb0",
+   "id": "36156abd",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5627533f",
+   "id": "405d6277",
    "metadata": {},
    "outputs": [
     {
@@ -1012,13 +1013,13 @@
     }
    ],
    "source": [
-    "# create a plot (boxplot) with age, gender, and stroke\n",
+    "# create a plot (boxplot) with age, smoking_status, and stroke\n",
     "sns.boxplot(data = stroke_df, x=stroke_df['age'], y=stroke_df['smoking_status'], hue=stroke_df['stroke'])\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37a6b80e",
+   "id": "9e2098e0",
    "metadata": {},
    "source": []
   }
