adding new graphs to image folder.

--- a/exploratory_data_analysis/stroke_exploratory_analysis.ipynb
+++ b/exploratory_data_analysis/stroke_exploratory_analysis.ipynb
@@ -960,8 +960,7 @@
    ],
    "source": [
     "# Create a plot showing the age with stroke versus without stroke.\n",
-    "sns.histplot(data=stroke_df, x='age', hue='stroke', multiple='dodge').set_title('Age/Stroke Distribution')\n",
-    "\n"
+    "sns.histplot(data=stroke_df, x='age', hue='stroke', multiple='dodge').set_title('Age/Stroke Distribution')\n"
    ]
   },
   {
