updating stroke_exploratory_analysis.ipynb file and adding two .png files.

--- a/exploratory_data_analysis/stroke_exploratory_analysis.ipynb
+++ b/exploratory_data_analysis/stroke_exploratory_analysis.ipynb
@@ -246,7 +246,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "32de63f9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -398,8 +400,34 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1526ce1e",
+   "id": "5d6dfe2f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4861\n",
+       "1     249\n",
+       "Name: stroke, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the values in the stroke column\n",
+    "stroke_df['stroke'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1526ce1e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -434,7 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "4087ffab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using .info(), .isna(), and .sum() shows that there are 201 null values in the 'bmi' column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "101cc05c",
    "metadata": {
     "scrolled": false
@@ -458,7 +496,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,9 +508,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "dfc1addc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -488,7 +528,7 @@
        "Name: bmi, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "id": "26d9987a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The team argreed to drop all of the null values and keep the 'bmi' column,\n",
+    "# as the they only made up roughly 4% of the 'bmi' column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "df60ad0a",
    "metadata": {},
    "outputs": [],
@@ -511,9 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "ab708824",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -533,7 +586,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +598,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "id": "7ea67959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After dropping the 201 null values from the 'bmi' column, \n",
+    "# the dataset was left with 4,909 rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "76bcb4e6",
    "metadata": {},
    "outputs": [
@@ -577,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "7716f32d",
    "metadata": {},
    "outputs": [
@@ -599,7 +663,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "4751890a",
    "metadata": {},
    "outputs": [
@@ -740,14 +804,15 @@
        "5          Urban             186.21  29.0  formerly smoked       1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# id column from dataframe\n",
-    "# Delete id column\n",
+    "# The 'id' column in the dataset does not serve or add anything to the analysis,\n",
+    "# Removal of the 'id' coulmn was agreed on. \n",
+    "# Removing the 'id' column\n",
     "stroke_df = stroke_df.drop(labels=\"id\", axis=1)\n",
     "# Verify dropped column\n",
     "stroke_df.head()"
@@ -755,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "17ff90b4",
    "metadata": {
     "scrolled": true
@@ -889,7 +954,7 @@
        "max      97.600000     1.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "d58b98f2",
    "metadata": {},
    "outputs": [
@@ -922,18 +987,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "9ecf5f96",
    "metadata": {},
    "outputs": [],
    "source": [
     "# As seen above 95.74 percent have not had a stroke, \n",
-    "# indicating the distribution skewed.\n"
+    "# indicating the distribution in the dataset is skewed.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
+   "id": "9e3e3ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4700\n",
+       "1     209\n",
+       "Name: stroke, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the values in the stroke column\n",
+    "# 40 patients with strokes were lost with the dropping of the null values in the 'bmi' column.\n",
+    "stroke_df['stroke'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926aef26",
+   "metadata": {},
+   "source": [
+    "## Visualizations using Seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "cf07abfe",
    "metadata": {},
    "outputs": [
@@ -943,7 +1041,7 @@
        "Text(0.5, 1.0, 'Age/Stroke Distribution')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -965,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "f490a1cd",
    "metadata": {},
    "outputs": [],
@@ -977,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "9fe6defb",
    "metadata": {},
    "outputs": [
@@ -990,7 +1088,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "cf8c986c",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "fdcf49fc",
    "metadata": {
     "scrolled": true
@@ -1071,7 +1169,7 @@
        "Male    42.049130  0.044257"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "dcef485c",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "c443dfb6",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1202,7 @@
        "Text(0.5, 1.0, 'Age/Gender-Stroke Distribution')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1126,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "aab6c8f7",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1236,7 @@
        "Name: ever_married, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "befe188f",
    "metadata": {
     "scrolled": true
@@ -1162,7 +1260,7 @@
        "Text(0.5, 1.0, 'Age/Avg Glucose Level/ BMI Stroke Distribution')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1185,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "bccee500",
    "metadata": {
     "scrolled": true
@@ -1201,7 +1299,7 @@
        "Name: smoking_status, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,9 +1313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "d89e3826",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1225,7 +1325,7 @@
        "Text(0.5, 1.0, 'Smoking Status/Stroke Distribution')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1250,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "405d6277",
    "metadata": {
     "scrolled": true
@@ -1262,7 +1362,7 @@
        "Text(0.5, 1.0, 'Age/Smoking Status/ Stroke Distribution')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1284,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "12021bd5",
    "metadata": {},
    "outputs": [
